vector-store: add PostIndexAnnFilter option to POST ann
