# api/openapi.json
@@ -244,6 +244,10 @@
   },
   "components": {
     "schemas": {
+      "ColumnName": {
+        "type": "string",
+        "description": "Name of the column in a db table."
+      },
       "DataType": {
         "type": "string",
         "description": "Data type and precision used for storing and processing vectors in the index.",
@@ -360,12 +364,252 @@
           "The node has completed the initial database scan and built the indexes defined at that time. It is now monitoring the database for changes."
         ]
       },
+      "PostIndexAnnFilter": {
+        "oneOf": [
+          {
+            "type": "object",
+            "required": [
+              "lhs",
+              "rhs",
+              "type"
+            ],
+            "properties": {
+              "lhs": {
+                "$ref": "#/components/schemas/ColumnName"
+              },
+              "rhs": {},
+              "type": {
+                "type": "string",
+                "enum": [
+                  "=="
+                ]
+              }
+            }
+          },
+          {
+            "type": "object",
+            "required": [
+              "lhs",
+              "rhs",
+              "type"
+            ],
+            "properties": {
+              "lhs": {
+                "$ref": "#/components/schemas/ColumnName"
+              },
+              "rhs": {
+                "type": "array",
+                "items": {}
+              },
+              "type": {
+                "type": "string",
+                "enum": [
+                  "IN"
+                ]
+              }
+            }
+          },
+          {
+            "type": "object",
+            "required": [
+              "lhs",
+              "rhs",
+              "type"
+            ],
+            "properties": {
+              "lhs": {
+                "$ref": "#/components/schemas/ColumnName"
+              },
+              "rhs": {},
+              "type": {
+                "type": "string",
+                "enum": [
+                  "<"
+                ]
+              }
+            }
+          },
+          {
+            "type": "object",
+            "required": [
+              "lhs",
+              "rhs",
+              "type"
+            ],
+            "properties": {
+              "lhs": {
+                "$ref": "#/components/schemas/ColumnName"
+              },
+              "rhs": {},
+              "type": {
+                "type": "string",
+                "enum": [
+                  "<="
+                ]
+              }
+            }
+          },
+          {
+            "type": "object",
+            "required": [
+              "lhs",
+              "rhs",
+              "type"
+            ],
+            "properties": {
+              "lhs": {
+                "$ref": "#/components/schemas/ColumnName"
+              },
+              "rhs": {},
+              "type": {
+                "type": "string",
+                "enum": [
+                  ">"
+                ]
+              }
+            }
+          },
+          {
+            "type": "object",
+            "required": [
+              "lhs",
+              "rhs",
+              "type"
+            ],
+            "properties": {
+              "lhs": {
+                "$ref": "#/components/schemas/ColumnName"
+              },
+              "rhs": {},
+              "type": {
+                "type": "string",
+                "enum": [
+                  ">="
+                ]
+              }
+            }
+          },
+          {
+            "type": "object",
+            "required": [
+              "lhs",
+              "rhs",
+              "type"
+            ],
+            "properties": {
+              "lhs": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/components/schemas/ColumnName"
+                }
+              },
+              "rhs": {
+                "type": "array",
+                "items": {}
+              },
+              "type": {
+                "type": "string",
+                "enum": [
+                  "(<)"
+                ]
+              }
+            }
+          },
+          {
+            "type": "object",
+            "required": [
+              "lhs",
+              "rhs",
+              "type"
+            ],
+            "properties": {
+              "lhs": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/components/schemas/ColumnName"
+                }
+              },
+              "rhs": {
+                "type": "array",
+                "items": {}
+              },
+              "type": {
+                "type": "string",
+                "enum": [
+                  "(<=)"
+                ]
+              }
+            }
+          },
+          {
+            "type": "object",
+            "required": [
+              "lhs",
+              "rhs",
+              "type"
+            ],
+            "properties": {
+              "lhs": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/components/schemas/ColumnName"
+                }
+              },
+              "rhs": {
+                "type": "array",
+                "items": {}
+              },
+              "type": {
+                "type": "string",
+                "enum": [
+                  "(>)"
+                ]
+              }
+            }
+          },
+          {
+            "type": "object",
+            "required": [
+              "lhs",
+              "rhs",
+              "type"
+            ],
+            "properties": {
+              "lhs": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/components/schemas/ColumnName"
+                }
+              },
+              "rhs": {
+                "type": "array",
+                "items": {}
+              },
+              "type": {
+                "type": "string",
+                "enum": [
+                  "(>=)"
+                ]
+              }
+            }
+          }
+        ]
+      },
       "PostIndexAnnRequest": {
         "type": "object",
         "required": [
           "vector"
         ],
         "properties": {
+          "filters": {
+            "type": [
+              "array",
+              "null"
+            ],
+            "items": {
+              "$ref": "#/components/schemas/PostIndexAnnFilter"
+            }
+          },
           "limit": {
             "$ref": "#/components/schemas/Limit"
           },
